# bevy-demo

./: .gitignore  CHANGELOG.md  COMMIT_MESSAGE.txt  Cargo.toml  EXPECTATIONS_MET.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_PLAN_V2.md  JUICY_GAME_COMPLETE.md  JUICY_IMPLEMENTATION_STATUS.md  Makefile  PLAY_NOW.txt  PLAY_V2.md  QUICK_REFERENCE.md  README.md  STATUS.md  TESTING.md  Trunk.toml  V2.5_COMPLETE.md  V2.5_PLAYTEST_GUIDE.md  V2.5_SUMMARY.txt  V2_EXECUTIVE_SUMMARY.md  V2_IMPLEMENTATION_SUMMARY.md  index.html  vercel.json
.cargo/: config.toml
crates/core/: Cargo.toml
crates/core/src/: components.rs  constants.rs  lib.rs  resources.rs  shop.rs  util.rs
crates/gameplay/: Cargo.toml
crates/gameplay/src/: lib.rs
crates/launcher/: Cargo.toml
crates/launcher/src/: main.rs
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs  storage.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs
docs/: IMPLEMENTATION_PLAN.md  IMPROVEMENTS_SUMMARY.md  PROFESSIONAL_TOOLS_IMPLEMENTATION.md  UX_FIXES_COMPLETE.md  V2_COMPLETE.md  V2_UPGRADE_NOTES.md  automation.md  bevy.md  fixes-2025-10-17.md  research-findings-improvements.md  spec.md  status.md  workflow.md
scripts/: vercel-build.sh
src/: game_feel.rs  main.rs  main.rs.backup  main.rs.v1-backup  main.rs.v2-backup
src/ui/: feedback.rs  layout.rs  mod.rs  navigation.rs  theme.rs  typography.rs
