[package]
name = "bevy-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "png",
] }
log = "0.4"
rand = "0.8"
avian2d = "0.1"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.14", default-features = false, features = ["x11"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.14", default-features = false, features = ["webgl2"] }
avian2d = { version = "0.1", default-features = false, features = ["2d", "f32"] }
getrandom = { version = "0.3", features = ["std", "wasm_js"] }
uuid = { version = "1", features = ["std", "rng-getrandom"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Storage"] }
serde_json = "1.0"
