[workspace]
members = [
    "crates/core",
    "crates/gameplay",
    "crates/ui",
    "crates/platform",
    "crates/launcher",
]
resolver = "2"
default-members = ["crates/launcher"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_wgpu",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "png",
] }
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["std", "wasm_js"] }
log = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Storage"] }

[workspace.metadata.release]
tag-name = "v{{version}}"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
