[package]
name = \"threadweaver-launcher\"
version.workspace = true
edition.workspace = true

[[bin]]
name = \"threadweaver\"
path = \"src/main.rs\"

[dependencies]
bevy = { workspace = true }
console_error_panic_hook = { workspace = true }
threadweaver-core = { path = "../core" }
threadweaver-gameplay = { path = "../gameplay" }
threadweaver-platform = { path = "../platform" }
threadweaver-ui = { path = "../ui" }
