[package]
name = "threadweaver-platform"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
bevy = { workspace = true }
threadweaver-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }

